fixing a selector issue, updating link color for expert sections to make it readable

--- a/style.css
+++ b/style.css
@@ -1384,6 +1384,10 @@ div.ss-response-footer {
 	padding: 1em;
 }
 
+.expert p a {
+	color: #0000cc;
+}
+
 .expert h3 {}
 
 .expert a.signup {
@@ -1399,7 +1403,7 @@ div.ss-response-footer {
 	background: #3b6898;
 }
 
-.expertise {
+div.expertise {
 	background: #cccccc;
 	padding: 1em;
 }
